app/components/OutputPresentation/OutputPresentation.module.css
.output-field {
  .label {
    color: var(--color-label);
    font-weight: var(--font-weight-bold);
  }

  .value {
    overflow-wrap: break-word;
  }

  &[data-variant='inline'] {
    display: flex;
    align-items: center;
    gap: var(--gap-s);

    .label {
      &::after {
        content: ':';
      }
    }

    &:has(> .label) .value {
      margin-right: var(--gap);
    }
  }

  .output-field[data-variant='block']:has(> .label) > .value {
    padding-left: var(--gap);
  }
}

.record-link-with-presentation {
  display: flex;
  align-items: flex-start;
  gap: var(--gap);

  .linked-presentation {
    border: 1px dashed var(--color-output-card-border);
    border-radius: var(--border-radius);
    padding: var(--gap-s);
    flex-grow: 1;
  }
}

.output-presentation {
  :global(.form-component-container) {
    gap: var(--gap-l);
  }

  &[data-compact='true'] {
    :global(.form-component-container) {
      gap: var(--gap-s);
    }
  }
}

.attributes {
  margin-bottom: var(--gap-s);
  font-style: italic;
  font-size: var(--font-size-s);
}

